fix: styles on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -62,6 +62,7 @@
 
     --border-radius: 0.5rem;
 
+    --spacing-xs: 0.125rem;
     --spacing-sm: 0.25rem;
     --spacing-md: 0.5rem;
     --spacing-lg: 1rem;
